test/semantics/programs/invalid/invalid-operation6.guav
# Should fail since incompatible operand types

x = ["ar", "ray"] + {dic: "tionary"}
